--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     }
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
