--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "recoil": "^0.7.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
