--- a/package.json
+++ b/package.json
@@ -37,12 +37,11 @@
     "firebase": "^10.1.0",
     "lucide-react": "^0.264.0",
     "next": "13.4.12",
+    "next-auth": "^4.23.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-loading-skeleton": "^3.3.1",
-    "recoil": "^0.7.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
