--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lucide-react": "^0.264.0",
     "next": "13.4.12",
     "next-auth": "^4.23.0",
+    "next-cloudinary": "^4.18.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
